# nativefiledialog-extended

./: .gitignore  CMakeLists.txt  conanfile.py
src/: CMakeLists.txt  nfd_cocoa.m  nfd_gtk.cpp  nfd_win.cpp
src/include/nfd/: nfd.hpp
test/: test_opendialog.c  test_opendialog_cpp.cpp  test_opendialogmultiple.c  test_opendialogmultiple_cpp.cpp  test_pickfolder.c  test_savedialog.c
test_package/: CMakeLists.txt  conanfile.py  nfd_example.cpp
